--- a/src/scss/compass.scss
+++ b/src/scss/compass.scss
@@ -3,13 +3,13 @@
 @import url(https://fonts.googleapis.com/css?family=Dosis:200,400,500,600);
 .compass {
   display: block;
-  width: 50px;
-  height: 50px;
+  width: 80px;
+  height: 80px;
   border-radius: 100%;
   box-shadow: 0 0 10px rgba(0, 0, 0, .85);
   position: absolute;
-  bottom: 30px;
-  right: 10px;
+  left: 500px;
+  bottom: 90px;
   font-family: 'Dosis';
   color: #555;
   text-shadow: 1px 1px 1px white;
@@ -19,7 +19,7 @@
     text-align: center;
     width: 100%;
     content: "N";
-    font-size: 10px;
+    font-size: 14px;
     top: -2px;
   }
   .direction {
@@ -37,20 +37,20 @@
       margin: 0;
       padding: 0;
       position: absolute;
-      top: -30%;
+      top: 50%;
       left: 0;
       width: 100%;
       height: 100%;
       line-height: 80px;
       display: block;
       margin-top: -45px;
-      font-size: 16px;
+      font-size: 28px;
       font-weight: bold;
       span {
         display: block;
         line-height: normal;
-        margin-top: -30px;
-        font-size: 8px;
+        margin-top: -24px;
+        font-size: 11px;
         text-transform: uppercase;
         font-weight: normal;
       }
