--- a/src/scss/search.scss
+++ b/src/scss/search.scss
@@ -16,7 +16,8 @@
     overflow: hidden;
     border-radius: var(--border-radius);
     box-shadow: 0 10px 30px rgba(#414856, .05);
-    display: flex;
+    //display: flex;
+    display: inline-block;
     justify-content: center;
     align-items: center;
     input[type="text"] {
